# mrtnpllr

./: .gitignore  README.md
week-01/day-2/: 1.txt  2.txt  3.txt  4.txt
week-01/day-3/HelloUser/: main.cpp
week-01/day-3/animals_and_legs/: main.cpp
week-01/day-3/avarage_of_input/: CMakeLists.txt  main.cpp
week-01/day-3/bmi/: main.cpp
week-01/day-3/coding_hours/: main.cpp
week-01/day-3/conditional_variable_mutation/: main.cpp
week-01/day-3/count_from_to/: main.cpp
week-01/day-3/cuboid/: main.cpp
week-01/day-3/define_basic-info/: main.cpp
week-01/day-3/draw_chess_table/: main.cpp
week-01/day-3/draw_pyramid/: main.cpp
week-01/day-3/draw_triangle/: main.cpp
week-01/day-3/fizz_buzz/: main.cpp
week-01/day-6/: CMakeLists.txt  buying_function.cpp  calculator.cpp  calculator_switch.cpp
week-01/day-7/: CMakeLists.txt  user_gullible.cpp
week-02/day-1/: CMakeLists.txt  list_intro.cpp  list_intro2.cpp  map_intro.cpp  map_intro2.cpp  personal_finance.cpp  product_database.cpp  shopping_list.cpp  simple_replace.cpp  takes_longer.cpp  telephone_book.cpp  todo_print.cpp  url_fixer.cpp
week-02/day-2/: CMakeLists.txt  adding.cpp  change_value.cpp  find_minimum.cpp  five_numbers.cpp  look_for_maximum.cpp  look_for_value.cpp  pointer_type.cpp  print_addresses.cpp  print_value.cpp  swap.cpp
week-02/day-3/: CMakeLists.txt  center_box_function.cpp  centered_square.cpp  checkerboard.cpp  colored_box.cpp  connect_the_dots.cpp  diagonals.cpp  draw.cpp  draw2.cpp  four_rectangles.cpp  function_to_center.cpp  go_to_center.cpp  horizontal_lines.cpp  line_in_the_middle.cpp  line_play.cpp  lol.cpp  main.cpp  position_square.cpp  purple_steps.cpp  purple_steps_3d.cpp  rainbow_box_function.cpp  triangles.cpp
week-02/day-4/: CMakeLists.txt  fight_simulator.cpp  items.cpp
week-03/day-1/: CMakeLists.txt  copy_file.cpp  count_lines.cpp  divide_by_zero.cpp  logs.cpp  my-file.txt  print_each_line.cpp  write_multiple_lines.cpp  write_single_line.cpp
week-03/day-3/: BlogPost.cpp  BlogPost.h  CMakeLists.txt  blog_post.cpp  doable_homework.cpp  post_it.cpp
week-03/day-5/recursion/: CMakeLists.txt  add.cpp  bunnies.cpp  bunnies2.cpp  greatest_common_divisor.cpp  power.cpp  strings.cpp  strings2.cpp  sum_digits.cpp
week-03/day-6/: CMakeLists.txt  Person.cpp  Person.h  Student.cpp  Student.h  main.cpp
week-06/day-5/: CMakeLists.txt  main.c
week-07/day-4-5-project/: .mxproject  mx.scratch  reaction_game_project.ioc
week-10/exam_prepare/: .mxproject  exam_prepare.ioc
week-10/snake_game_project/: .mxproject  snake_game_project.ioc
(+416 files in other folders)
