cmake_minimum_required(VERSION 3.14)
project(day_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(simple_replace simple_replace.cpp)
add_executable(url_fixer url_fixer.cpp)
add_executable(takes_longer takes_longer.cpp)
add_executable(todo_print todo_print.cpp)
add_executable(list_intro list_intro.cpp)
add_executable(map_intro map_intro.cpp)