cmake_minimum_required(VERSION 3.14)
project(day_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(simple_replace simple_replace.cpp)
add_executable(url_fixer url_fixer.cpp)
add_executable(takes_longer takes_longer.cpp)
add_executable(todo_print todo_print.cpp)
add_executable(list_intro list_intro.cpp)
add_executable(map_intro map_intro.cpp)
add_executable(list_intro2 list_intro2.cpp)
add_executable(map_intro2 map_intro2.cpp)
add_executable(personal_finance personal_finance.cpp)
add_executable(telephone_book telephone_book.cpp)