cmake_minimum_required(VERSION 3.14)
project(day_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(pointer_type pointer_type.cpp)
add_executable(print_value print_value.cpp)
add_executable(change_value change_value.cpp)
add_executable(adding adding.cpp)
add_executable(find_minimum find_minimum.cpp)
add_executable(swap swap.cpp)
add_executable(print_addresses print_addresses.cpp)
add_executable(five_numbers five_numbers.cpp)
add_executable(look_for_value look_for_value.cpp)
add_executable(look_for_maximum look_for_maximum.cpp)